@@ -1,0 +1,4 @@
+#= require autosize
+
+$ ->
+  autosize($('.js-autosize'))
