@@ -107,6 +107,7 @@
   background: #FFF;
   border: 1px solid #ddd;
   min-height: 140px;
+  max-height: 430px;
   padding: 5px;
   box-shadow: none;
   width: 100%;
