@@ -159,6 +159,7 @@
 .edit_note {
   .markdown-area {
     min-height: 140px;
+    max-height: 430px;
   }
   .note-form-actions {
     background: transparent;
