@@ -1,6 +1,6 @@
 .zennable
   .zen-backdrop
-    - classes << ' js-gfm-input markdown-area'
+    - classes << ' js-gfm-input js-autosize markdown-area'
     - if defined?(f) && f
       = f.text_area attr, class: classes
     - else
